# previa

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.kubernetes-plugin  LICENSE  PROJECT.md  README.md  SECURITY.md  api-smoke.previa.yaml  install.ps1  install.sh  previa-compose.yaml  release-metadata.json
.agents/plugins/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: kubernetes-plugin.yaml  release.yaml
app/: .gitignore  README.md  asd.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  wrangler.jsonc
app/.lovable/: plan.md
app/dev-dist/: sw.js
app/docs/: persistence-model.md  pipeline-guide.md  previa-api-schema.json  test-execution-api.yaml
app/public/: manifest.json
app/src/: App.tsx  index.css  main.tsx
app/src/components/: AIPipelineChat.tsx  AccountSettingsDialog.tsx  AppHeader.tsx  AppShell.tsx  BatchControls.tsx  ConfirmDeleteDialog.tsx  ConfirmDialog.tsx  ContextSwitcher.test.tsx  ContextSwitcher.tsx  DotsLoader.tsx  EmptyState.tsx  EventsPanel.tsx  ExportDialog.tsx  ImportButton.tsx  InstallAppButton.tsx  LanguageToggle.tsx  LoadTestConfigPanel.test.tsx  LoadTestConfigPanel.tsx  LoadTestMiniChart.tsx  LoadTestResultsPanel.test.tsx  LoadTestResultsPanel.tsx  LoadTestRunHistoryItem.tsx  LoadTestTab.test.tsx  LoadTestTab.tsx  MethodBadge.tsx  MonacoCodeEditor.tsx  MonacoDiffEditor.tsx  MonacoInput.tsx  OnboardingModal.tsx  PipelineDocsPanel.tsx  PipelineListItem.tsx  PipelineMiniChart.tsx  PipelineSharingDialog.tsx  PreviaLogo.tsx  PreviewLayout.tsx  ProjectCard.test.tsx  ProjectCard.tsx  ProjectEnvGroupsPanel.test.tsx  ProjectEnvGroupsPanel.tsx  ProjectSettingsDialog.tsx  (+23 more)
app/src/hooks/: useStepAutoScroll.ts
app/src/i18n/: index.ts
app/src/lib/: api-client.test.ts  api-client.ts  api-errors.ts  auth-client.ts  chat-db.ts  constants.ts  dashboard-data.ts  execution-store.ts  load-lifecycle-chart.ts  load-rps-chart.ts  load-test-dashboard-data.ts  mcp-client.ts  (+23 more)
docker/: Dockerfile.artifact
docs/: previa-usage.md  previactl-usage.md
docs/issues/: execution-concurrency-control.md
docs/previa/: README.md  api-workflows.md  architecture.md  cli-commands.md  compose.md  e2e-queues.md  end-to-end-walkthrough.md  examples-cookbook.md  faq.md  getting-started.md  glossary.md  home-and-contexts.md  main-runner-auth.md  mcp.md  minimal-happy-path.md  operations-cheatsheet.md  operations.md  pipeline-authoring.md  pipeline-export.md  pipeline-import.md  project-repository-workflow.md  proxy.md  release-install.md  remote-runners.md  runtime-modes.md  security.md  spec-driven-testing.md  troubleshooting.md  up-and-runtime.md  version-compatibility.md
docs/specs/: previa-v1.md  previactl-v1.md
engine/: Cargo.toml  README.md
engine/src/: lib.rs
engine/src/assertions/: mod.rs
engine/src/core/: types.rs
engine/src/execution/: cancel.rs  engine.rs  http.rs  http_step.rs  logging.rs  mod.rs
engine/src/template/: helpers.rs  mod.rs  resolve.rs
kubernetes-plugin/: Cargo.toml
kubernetes-plugin/src/: main.rs  models.rs  routes.rs
kubernetes-plugin/src/services/: karpenter.rs  mod.rs  reservations.rs  runner_resources.rs
main/: Cargo.toml  README.md  build.rs
main/migrations/: 202603030001_init_all.sql  202603130001_add_e2e_queues.sql  202605130001_add_runner_reservations.sql  202605260001_add_user_profile_fields.sql
main/migrations/postgres/: 202603030001_init_all.sql  202603130001_add_e2e_queues.sql  202604290001_add_runner_registry.sql  202605260001_add_user_profile_fields.sql
main/migrations/sqlite/: 202603030001_init_all.sql  202604290001_add_runner_registry.sql  202605130001_add_runner_reservations.sql
main/src/: main.rs
main/src/server/: docs.rs  errors.rs  mod.rs  models.rs  state.rs  utils.rs
main/src/server/db/: common.rs  e2e_queues.rs  history.rs  mod.rs  pipelines.rs  pool.rs  projects.rs  query_utils.rs  runner_reservations.rs  runners.rs  specs.rs  transfers.rs  users.rs
main/src/server/execution/: e2e.rs  e2e_queue.rs  forward.rs  history_capture.rs  load.rs  load_batch.rs  mod.rs  node_plan.rs  runner_auth.rs  runtime_specs.rs  scheduler.rs  snapshot.rs  sse_stream.rs
main/src/server/handlers/: app.rs  auth.rs  executions.rs  health.rs  history_e2e.rs  history_load.rs  mod.rs  pipelines.rs  projects.rs  proxy.rs  runners.rs  specs.rs  tests_e2e.rs  tests_e2e_queue.rs  tests_load.rs  transfers.rs  users.rs
main/src/server/mcp/: handlers.rs  models.rs  service.rs
main/src/server/middleware/: auth.rs  transaction.rs
main/src/server/services/: mod.rs  pipeline_access.rs  pipeline_import.rs  pipeline_runtime.rs  project_access.rs  runner_registry.rs
main/src/server/validation/: mod.rs  openapi.rs  pipelines.rs  specs.rs
previa/: Cargo.toml
previa/src/: browser.rs  cli.rs  compose.rs  config.rs  diagnostics.rs  download.rs  envfile.rs  export.rs  health.rs  init.rs  lib.rs  local_push.rs  logs.rs  main.rs  mcp_cli.rs  paths.rs  pipeline_import.rs  process.rs  pull.rs  runner_cli.rs  runtime.rs
previa/tests/: cli.rs
previactl/: Cargo.toml  README.md
previactl/src/: browser.rs  cli.rs  compose.rs  config.rs  health.rs  lib.rs  logs.rs  main.rs  output.rs  paths.rs  process.rs  pull.rs  runtime.rs  selectors.rs
previactl/src/models/: install.rs  release.rs
previactl/src/routes/: cli.rs
previactl/src/services/: github.rs  manager.rs  mod.rs  storage.rs
previactl/tests/: cli.rs
runner/: Cargo.toml  README.md
runner/src/: lib.rs  main.rs
runner/src/server/: docs.rs  errors.rs  load_dispatch.rs  load_wave.rs  metrics.rs  mod.rs  models.rs  sse.rs  state.rs  utils.rs  wave_dispatcher.rs  wave_executor.rs  wave_metrics_actor.rs  wave_scheduler.rs  wave_sender.rs
runner/src/server/handlers/: e2e.rs  load.rs  mod.rs  system.rs
runner/src/server/middleware/: auth.rs  http_logging.rs  mod.rs  transaction.rs
scripts/: generate_changelog.py  generate_release_metadata.py  sync-app-snapshot.sh  test_release_metadata.py
(+102 files in other folders)
