[workspace]
resolver = "3"
members = ['engine', 'main', 'runner']

[workspace.dependencies]
axum = "0.8"
rand = "0.10.0"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1", features = ["v4", "v7"] }
