[package]
name = "previa-engine"
version = "0.1.0"
edition = "2024"
description = "Motor de execucao de pipelines da plataforma Previa."
authors = ["Previa Labs <previa@previa.dev>"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fakeit = "1.4.1"
handlebars = "6.3.2"
regex = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.8.3"
