[package]
name = "previa-engine"
version = "0.0.4"
edition = { workspace = true }
description = "Motor de execucao de pipelines da plataforma Previa."
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
chrono = { workspace = true }
fakeit = "1.4.1"
handlebars = "6.3.2"
regex = "1"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = "0.8.3"
