[package]
name = "previa-main"
description = "API orchestrator for load distribution between runners."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
md5 = "0.8"
oas3 = { version = "0.20.1", features = ["yaml-spec"] }
previa-runner = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
    "stream",
] }
serde_yaml = "0.9"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }

[dev-dependencies]
