[package]
name = "previa"
description = "CLI local para operar stacks do Previa."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true

[dependencies]
anyhow = "1"
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dotenvy = { workspace = true }
fs2 = "0.4"
indicatif = "0.18"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml_edit = "0.22"
previa-runner = { workspace = true }
urlencoding = "2"
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "net",
    "process",
    "signal",
] }
uuid = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
assert_cmd = "2"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
