[package]
name = "previactl"
version = { workspace = true }
edition = { workspace = true }
description = "CLI para instalar, atualizar e remover binarios do Previa em Linux."
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
flate2 = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
semver = "1"
serde = { workspace = true }
tar = "0.4"
tempfile = "3"
tokio = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
