[package]
name = "previa-runner"
version = { workspace = true }
edition = { workspace = true }
description = "API for remote execution of integration and load tests via HTTP streaming (SSE)."
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
previa-engine = { path = "../engine" }
sysinfo = "0.38.3"

[dev-dependencies]
httpmock = "0.8.3"
